--- a/Areas/Room/Views/Room/CreateHome.cshtml
+++ b/Areas/Room/Views/Room/CreateHome.cshtml
@@ -1,5 +1,4 @@
 @model App.Models.RentalProperty
-
 <div class="container-fluid">
     <div class="row">
         <div class="col-lg-12">
@@ -195,8 +194,23 @@
                                 @Html.ValidationMessageFor(m => m.PropertyImage, "", new { @class = "text-danger" })
                             </div>
 
-                            <div class="text-center mt-4">
-                                <button type="submit" class="btn btn-primary btn-lg px-5">Add Rental Property</button>
+                            <div class="container mt-6">
+                                <div class="text-center">
+                                    <div class="row">
+                                        <!-- Nút Back to Home -->
+                                        <div class="col-12 col-md-6 mb-3">
+                                            <a asp-action="Index" class="btn btn-light btn-lg w-100">
+                                                Back to Home
+                                            </a>
+                                        </div>
+                                        <!-- Nút Update Rental Property -->
+                                        <div class="col-12 col-md-6 mb-3">
+                                            <button type="submit" class="btn btn-dark btn-lg w-100">
+                                                Create Rental Property
+                                            </button>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </form>
                     </div>
