--- a/Areas/Room/Views/Room/Index.cshtml
+++ b/Areas/Room/Views/Room/Index.cshtml
@@ -68,7 +68,8 @@
                                 <a asp-controller="Room" asp-action="CreateRoom" class="btn btn-primary me-2 ">
                                     <i class="fas fa-plus"></i> Add room
                                 </a>
-                                <a asp-controller="Room" asp-action="EditHome" class="btn btn-info me-2 ">
+                                <a asp-controller="Room" asp-action="EditHome" asp-route-id="30"
+                                    class="btn btn-info me-2 ">
                                     <i class="fas fa-edit"></i> Update home
                                 </a>
                                 @* <a href="#" class="btn btn-danger ">
