--- a/Areas/Room/Views/Room/Index.cshtml
+++ b/Areas/Room/Views/Room/Index.cshtml
@@ -91,7 +91,26 @@
                             @* Load list room *@
 
                         </div>
-                        <partial name="_Paging"></partial>
+
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <div class="bootstrap-pagination">
+                                    <nav>
+                                        <ul id="pagination-list" class="pagination justify-content-center">
+                                            <li class="page-item disabled">
+                                                <a class="page-link" href="#" tabindex="-1">Previous</a>
+                                            </li>
+                                            <!-- Các nút phân trang sẽ được thêm vào đây qua JavaScript -->
+                                            <li class="page-item disabled">
+                                                <a class="page-link" href="#">Next</a>
+                                            </li>
+                                        </ul>
+                                    </nav>
+                                </div>
+                            </div>
+                        </div>
+
+                        @* <partial name="_Paging"></partial> *@
                     </div>
                 </div>
             </div>
